--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	font-family: "Inter", sans-serif;
+	color: #1f2937;
+}
+
+a {
+	text-decoration: none;
+	white-space: nowrap;
+}
+
+input,
+button {
+	font-family: "Inter", sans-serif;
+}
+
+button {
+	font-size: 0.8rem !important;
+	white-space: nowrap;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
+::placeholder {
+	font-family: "Inter", sans-serif;
 }
