--- a/client/src/App.css
+++ b/client/src/App.css
@@ -199,6 +199,153 @@ input::placeholder {
 	z-index: -1;
 }
 
+.camera-container {
+	display: flex;
+}
+
+.camera-container {
+	display: flex;
+	min-width: 500px;
+	height: 600px;
+}
+
+.camera,
+.camera-view {
+	height: 30vh;
+	padding: 1rem;
+	border-radius: 5px;
+	background: rgb(37, 37, 37);
+	cursor: pointer;
+	color: white;
+	margin: 0.8rem 0;
+}
+
+.camera-view {
+	height: 75vh;
+	cursor: default;
+}
+
+.view-info {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.green {
+	color: rgb(56, 195, 56);
+}
+
+.red {
+	color: var(--second-color-red);
+	position: relative;
+	margin-left: 1rem;
+}
+
+.details {
+	height: 75vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 0 2rem 2rem 2rem;
+}
+
+.camera-text-content {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.vehicle-img {
+	max-width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.vehicle-img-container {
+	height: 100% !important;
+}
+
+.vehicle-topic {
+	padding-bottom: 1rem;
+}
+
+.text-center {
+	text-align: center;
+}
+
+.record::before {
+	content: "";
+	background: var(--second-color-red);
+	width: 1rem;
+	height: 1rem;
+	position: absolute;
+	top: 50%;
+	left: -70%;
+	transform: translateY(-50%);
+	border-radius: 50%;
+}
+
+.flex {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 100%;
+}
+
+.view-btn,
+.action-btn {
+	background: var(--main-color-blue);
+	color: white;
+	padding: 0.5rem 1rem;
+	border-radius: 5px;
+}
+
+.action-btn {
+	background: none;
+	font-size: 1.5rem;
+	padding: 0;
+	font-weight: 700;
+}
+
+.x {
+	color: var(--second-color-red);
+}
+
+.check {
+	color: var(--main-color-green);
+	margin-right: 2rem;
+}
+
+@media screen and (max-width: 1120px) {
+	.view-info {
+		display: block;
+	}
+}
+
+@media screen and (max-width: 1366px) {
+	.vehicle-img-container {
+		width: 100% !important;
+		margin-bottom: 2rem;
+	}
+	.vehicle-info-container {
+		width: 100% !important;
+		margin-left: 0.4rem;
+	}
+}
+
+@media screen and (max-width: 1630px) {
+	#vehicle-info-card {
+		display: flex;
+		flex-wrap: wrap;
+	}
+}
+
+@media screen and (max-width: 1280px) {
+	.flex-column {
+		flex-direction: column;
+	}
+}
+
 @media screen and (max-width: 1000px) {
 	.width-full {
 		font-size: 0.9rem !important;
