CREATE: supplier evaluation created

--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -32,7 +32,7 @@
 	--second-color-green: #4caf50;
 
 	--main-color-orange: #d68102;
-	--second-color-orange: #fca11a;
+	--second-color-orange: #fab041;
 
 	--sidebar-width: 300px;
 	--border-radius: 15px;
