--- a/client/src/App.css
+++ b/client/src/App.css
@@ -443,7 +443,11 @@ input::placeholder {
 }
 
 .item-assign {
-	margin-left: 10px;
+	margin-left: 30px;
 	margin-right: 10px;
 	color: gray;
+}
+
+.mat {
+	margin-left: 50px;
 }
