--- a/client/src/components/badge/badge.css
+++ b/client/src/components/badge/badge.css
@@ -4,6 +4,8 @@
 	border-radius: 24px;
 	box-shadow: var(--box-shadow);
 	font-size: 0.8rem;
+	text-transform: capitalize;
+	white-space: nowrap;
 }
 
 .badge-danger {
