--- a/client/src/components/badge/badge.css
+++ b/client/src/components/badge/badge.css
@@ -23,3 +23,7 @@
 .badge-warning {
 	background-color: var(--second-color-orange);
 }
+
+.badge-normal {
+	background-color: var(--second-color-blue);
+}
